--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,16 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/tinker": "~1.0",
-        "overtrue/laravel-wechat": "~4.0"
+        "overtrue/laravel-lang": "~3.0",
+        "overtrue/laravel-wechat": "~4.0",
+        "predis/predis": "~1.0",
+        "symfony/dom-crawler": "^4.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.4",
+        "overtrue/laravel-query-logger": "^1.0",
         "doctrine/dbal": " ~2.3",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
