--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,10 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+WECHAT_OFFICIAL_ACCOUNT_APPID=wxf01054870e6ce5eb
+WECHAT_OFFICIAL_ACCOUNT_SECRET=24b4ec7766e4969ecc0f80306a117f26
+WECHAT_OFFICIAL_ACCOUNT_TOKEN=zixunminda
+WECHAT_OFFICIAL_ACCOUNT_AES_KEY=TilHssS9xYUWmUGtLGaHvUiTOtb2vnByPG42VXweCbC
+
+WECHAT_LOG_FILE= /app/storage/logs/wechat.log
