--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,13 @@
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
-        "laravel/framework": "5.5.*",
         "guzzlehttp/guzzle": "^6.3",
+        "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/laravel-wechat": "~4.0",
         "predis/predis": "~1.0",
+        "symfony/css-selector": "^4.1",
         "symfony/dom-crawler": "^4.1"
     },
     "require-dev": {
