--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "overtrue/laravel-wechat": "~4.0",
         "predis/predis": "~1.0",
         "symfony/css-selector": "^4.1",
-        "symfony/dom-crawler": "^4.1"
+        "symfony/dom-crawler": "^4.1",
+        "dingo/api": "2.0.0-alpha2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.4",
