--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,16 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "dingo/api": "2.0.0-alpha2",
         "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/laravel-wechat": "~4.0",
-        "predis/predis": "~1.0",
+        "predis/predis": "^1.1",
         "symfony/css-selector": "^4.1",
-        "symfony/dom-crawler": "^4.1",
-        "dingo/api": "2.0.0-alpha2"
+        "symfony/dom-crawler": "^4.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.4",
