--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
-APP_NAME=Laravel
+APP_NAME=Wechat_Official
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
+DB_DATABASE=wechat
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
@@ -34,9 +34,39 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
-WECHAT_OFFICIAL_ACCOUNT_APPID=wxf01054870e6ce5eb
-WECHAT_OFFICIAL_ACCOUNT_SECRET=24b4ec7766e4969ecc0f80306a117f26
-WECHAT_OFFICIAL_ACCOUNT_TOKEN=zixunminda
-WECHAT_OFFICIAL_ACCOUNT_AES_KEY=TilHssS9xYUWmUGtLGaHvUiTOtb2vnByPG42VXweCbC
+# dingo config
+API_STANDARDS_TREE=prs
+API_SUBTYPE=wechat
+API_PREFIX=api
+API_VERSION=v1
+API_DEBUG=true
 
+# easywechat
+WECHAT_OFFICIAL_ACCOUNT_APPID=
+WECHAT_OFFICIAL_ACCOUNT_SECRET=
+WECHAT_OFFICIAL_ACCOUNT_TOKEN=
+WECHAT_OFFICIAL_ACCOUNT_AES_KEY=
 WECHAT_LOG_FILE= /app/storage/logs/wechat.log
+
+OPENID_REGEX = /^onzftw[a-zA-Z0-9_-]{22}/
+
+# outer api
+Api_Aliyun=
+
+# base url
+BASE_URL =
+BLOG_URL =
+TIMETABLE_URL =
+
+# school datetime
+
+semester_begin_date = 2018/03/05
+semester_end_date = 2018/06/20
+timeZone = Asia/Shanghai
+holidayPrompt = HappyHoliday!
+
+# cache time
+
+TIMETABLE_CACHE_TIME = 7200
+EXAM_CACHE_TIME = 7200
+SCORE_CACHE_TIME = 7200
