修改缓存设置

--- a/.env.example
+++ b/.env.example
@@ -67,6 +67,7 @@ holidayPrompt = HappyHoliday!
 
 # cache time
 
+COOKIE_TIME = 3600
 TIMETABLE_CACHE_TIME = 7200
 EXAM_CACHE_TIME = 7200
 SCORE_CACHE_TIME = 7200
