--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /node_modules
 /public/hot
 /public/storage
-/public/webhook/webhook_deploy.log
+/public/webhook
 /storage/*.key
 /vendor
 /.idea
@@ -11,3 +11,6 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+
+# ide helper files
+_ide_helper*.php
