--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "ext-json": "^1.6",
         "dingo/api": "2.0.0-alpha2",
         "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "^6.3",
