--- a/.env.example
+++ b/.env.example
@@ -67,6 +67,7 @@ holidayPrompt = HappyHoliday!
 
 # cache time
 
+LAB_INFO_CACHE_TIME = 3600
 COOKIE_TIME = 3600
 TIMETABLE_CACHE_TIME = 7200
 EXAM_CACHE_TIME = 7200
