--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
     "require": {
         "php": ">=7.0.0",
         "ext-json": "^1.6",
-        "dingo/api": "2.0.0-alpha2",
+        "dingo/api": "2.1.0",
         "fideloper/proxy": "~4.0",
         "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.8.*",
         "laravel/tinker": "~1.0",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/laravel-wechat": "~4.0",
