--- a/composer.json
+++ b/composer.json
@@ -6,24 +6,25 @@
     "type": "project",
     "require": {
         "php": ">=7.1.0",
+        "ext-curl": "*",
         "ext-json": "^1.6",
         "dingo/api": "2.1.0",
+        "doctrine/dbal": " ~2.3",
         "fideloper/proxy": "~4.0",
+        "filp/whoops": "~2.0",
+        "fzaninotto/faker": "~1.4",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "~1.0",
+        "mockery/mockery": "~1.0",
+        "monolog/monolog": "^1.24",
         "overtrue/laravel-lang": "~3.0",
+        "overtrue/laravel-query-logger": "^1.0",
         "overtrue/laravel-wechat": "~4.0",
+        "phpunit/phpunit": "~7.0",
         "predis/predis": "^1.1",
         "symfony/css-selector": "^4.1",
-        "symfony/dom-crawler": "^4.1",
-        "overtrue/laravel-query-logger": "^1.0",
-        "doctrine/dbal": " ~2.3",
-        "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~7.0",
-        "ext-curl": "*"
+        "symfony/dom-crawler": "^4.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.4",
